add Google Analytics and Mixpanel tracking codes

--- a/themes/solar/theme.conf
+++ b/themes/solar/theme.conf
@@ -2,3 +2,8 @@
 inherit = basic
 stylesheet = solar.css
 pygments_style = none
+
+[options]
+google_analytics_id =
+google_analytics_domain =
+mixpanel_id =
